# Encyctyl

./: .gitignore  AGENTS.md  Cargo.toml  README.md  dev_native_knowledge_system_agent_plan.md  plan.md
apps/desktop/: Cargo.toml
apps/desktop/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/parser/: Cargo.toml
crates/parser/src/: frontmatter.rs  lib.rs  tags.rs  wikilinks.rs
crates/storage/: Cargo.toml
crates/storage/src/: lib.rs
crates/vault/: Cargo.toml
crates/vault/src/: lib.rs
src/: main.rs
