[package]
name = "encyctyl-storage"
version = "0.1.0"
edition = "2021"

[dependencies]
encyctyl-core = { path = "../core" }
rusqlite = { version = "0.34", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
thiserror = "2"
tracing = "0.1"

[features]
bundled = ["rusqlite/bundled"]
